[gd_scene load_steps=8 format=3 uid="uid://t6n3covesgk3"]

[ext_resource type="Texture2D" uid="uid://cuneshuqc8nvh" path="res://assets/ui/menu map.jpg" id="1_ottt4"]
[ext_resource type="Script" path="res://scripts/ui/selectMap.gd" id="1_pxt8x"]
[ext_resource type="Texture2D" uid="uid://bxk5rrc8h3rq6" path="res://assets/ui/button.png" id="2_30y5y"]
[ext_resource type="Texture2D" uid="uid://be740j3eybcah" path="res://assets/ui/button_press.png" id="3_06ogj"]
[ext_resource type="PackedScene" uid="uid://cbsoson37utwj" path="res://scenes/ui/map_icon.tscn" id="3_c3lo8"]
[ext_resource type="Texture2D" uid="uid://lwhbobetabco" path="res://assets/ui/select-map.png" id="3_o60ur"]
[ext_resource type="FontFile" uid="uid://dp64bvv6uha1i" path="res://assets/ui/font/advanced_pixel-7.ttf" id="4_e8oth"]

[node name="selectMap" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pxt8x")

[node name="selectMapLayer" type="CanvasLayer" parent="."]

[node name="MenuMap" type="TextureRect" parent="selectMapLayer"]
offset_right = 1024.0
offset_bottom = 600.0
texture = ExtResource("1_ottt4")
expand_mode = 1

[node name="mapIcon" parent="selectMapLayer/MenuMap" instance=ExtResource("3_c3lo8")]

[node name="mapIcon2" parent="selectMapLayer/MenuMap" instance=ExtResource("3_c3lo8")]
world_index = 1

[node name="mapIcon3" parent="selectMapLayer/MenuMap" instance=ExtResource("3_c3lo8")]
world_index = 2

[node name="mapIcon4" parent="selectMapLayer/MenuMap" instance=ExtResource("3_c3lo8")]
offset_left = 267.0
offset_top = 506.0
offset_right = 307.0
offset_bottom = 546.0
world_index = 3

[node name="mapIcon5" parent="selectMapLayer/MenuMap" instance=ExtResource("3_c3lo8")]
offset_left = 190.0
offset_top = 438.0
offset_right = 230.0
offset_bottom = 478.0
world_index = 4

[node name="mapIcon6" parent="selectMapLayer/MenuMap" instance=ExtResource("3_c3lo8")]
offset_left = 158.0
offset_top = 345.0
offset_right = 198.0
offset_bottom = 385.0
world_index = 5

[node name="mapIcon7" parent="selectMapLayer/MenuMap" instance=ExtResource("3_c3lo8")]
offset_left = 159.0
offset_top = 292.0
offset_right = 199.0
offset_bottom = 332.0
world_index = 6

[node name="mapIcon8" parent="selectMapLayer/MenuMap" instance=ExtResource("3_c3lo8")]
offset_left = 229.0
offset_top = 230.0
offset_right = 269.0
offset_bottom = 270.0
world_index = 7

[node name="mapIcon9" parent="selectMapLayer/MenuMap" instance=ExtResource("3_c3lo8")]
offset_left = 290.0
offset_top = 262.0
offset_right = 330.0
offset_bottom = 302.0
world_index = 8

[node name="mapIcon10" parent="selectMapLayer/MenuMap" instance=ExtResource("3_c3lo8")]
offset_left = 312.0
offset_top = 268.0
offset_right = 352.0
offset_bottom = 308.0
world_index = 9

[node name="mapIcon11" parent="selectMapLayer/MenuMap" instance=ExtResource("3_c3lo8")]
offset_left = 298.0
offset_top = 169.0
offset_right = 338.0
offset_bottom = 209.0
world_index = 10

[node name="mapIcon12" parent="selectMapLayer/MenuMap" instance=ExtResource("3_c3lo8")]
offset_left = 459.0
offset_top = 283.0
offset_right = 499.0
offset_bottom = 323.0
world_index = 11

[node name="mapIcon13" parent="selectMapLayer/MenuMap" instance=ExtResource("3_c3lo8")]
offset_left = 359.0
offset_top = 415.0
offset_right = 399.0
offset_bottom = 455.0
world_index = 12

[node name="mapIcon14" parent="selectMapLayer/MenuMap" instance=ExtResource("3_c3lo8")]
offset_left = 427.0
offset_top = 490.0
offset_right = 467.0
offset_bottom = 530.0
world_index = 13

[node name="mapIcon15" parent="selectMapLayer/MenuMap" instance=ExtResource("3_c3lo8")]
offset_left = 375.0
offset_top = 498.0
offset_right = 415.0
offset_bottom = 538.0
world_index = 14

[node name="playerIcon" type="TextureRect" parent="selectMapLayer/MenuMap"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_o60ur")
expand_mode = 3

[node name="mapName" type="Label" parent="selectMapLayer/MenuMap"]
layout_mode = 0
offset_left = 577.0
offset_top = 116.0
offset_right = 986.0
offset_bottom = 176.0
theme_override_fonts/font = ExtResource("4_e8oth")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1

[node name="Select" type="TextureButton" parent="selectMapLayer"]
offset_left = 655.0
offset_top = 458.0
offset_right = 915.0
offset_bottom = 538.0
texture_normal = ExtResource("2_30y5y")
texture_pressed = ExtResource("3_06ogj")
texture_hover = ExtResource("3_06ogj")

[node name="Label" type="Label" parent="selectMapLayer/Select"]
layout_mode = 0
offset_left = 33.0
offset_top = -1.0
offset_right = 225.0
offset_bottom = 82.0
theme_override_fonts/font = ExtResource("4_e8oth")
theme_override_font_sizes/font_size = 80
text = "SELECT"

[connection signal="pressed" from="selectMapLayer/Select" to="." method="_on_select_pressed"]
